--- a/wordpress/.htaccess
+++ b/wordpress/.htaccess
@@ -7,3 +7,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
 </IfModule>
+
+Redirect /wp-login /wp-login.php
